# errorparty-

./: .env.example  .gitattributes  .gitignore  ADMIN_TRACK_UPLOAD_GUIDE.md  AUTOMATED_MUSIC_SYSTEM.md  DESKTOP_APP_CHECKLIST.md  DESKTOP_APP_COMPLETE.md  DESKTOP_APP_GUIDE.md  DESKTOP_DEPLOYMENT.md  DESKTOP_QUICKSTART.md  DOCKER_SMART_PLAYLISTS_QUICKSTART.md  EDITORIAL_PLAYLISTS_UPDATE.md  FRONTEND_BACKEND_ANALYSIS.md  HOTFIX_SPRINT_COMPLETE.md  README.md  SMART_PLAYLISTS_CHECKLIST.md  SMART_PLAYLISTS_DEPLOYED.md  SMART_PLAYLISTS_DOCKER_SETUP.md  SMART_PLAYLISTS_SUMMARY.md  SPRINT_1_COMPLETE.md  TAURI_API_FIX_SUMMARY.md  TAURI_SSL_FIX.md  VS_BUILD_TOOLS_INSTALL.md  build-desktop.ps1  build-tauri.bat  check-smart-playlists-docker.ps1  check-smart-playlists-docker.sh  deploy-to-production.ps1  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  DOCKER_AUDIO_SYSTEM.md  Dockerfile  Dockerfile.dev  Dockerfile.vktoken  HOMEPAGE_QUALITY_FIX.md  LMUSIC_KZ_INTEGRATION.md  MIGRATION_STATUS.md  MODULAR_ARCHITECTURE.md  MUSIC_MODULE.md  MUSIC_MODULE_STATUS.md  MUSIC_SOURCES_GUIDE.md  NEW_TRACKS_IMPORT_REPORT.md  POPULARITY_ANALYTICS_SYSTEM.md  README_UNIFIED_MUSIC.md  SMART_PLAYLISTS_README.md  UNIFIED_MUSIC_QUICKSTART.md  UNIFIED_MUSIC_SYSTEM.md  YANDEX_MUSIC_INTEGRATION.md  analyze-editorial-playlists.js  analyze-music.js  analyze-top100.js  check-counts.sql  check-home-tracks.js  check-sources.js  check-track.js  cleanup-test.js  demo-new-sorting.js  (+43 more)
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
(+756 files in other folders)
